syntax = "proto3";
package elys.parameter;

option go_package = "github.com/elys-network/elys/x/parameter/types";

message ProposalUpdateMinCommission {
  string title = 1;
  string description = 2;
  string min_commission = 3;
}

message ProposalUpdateMaxVotingPower {
  string title = 1;
  string description = 2;
  string max_voting_power = 3;
}

message ProposalUpdateMinSelfDelegation {
  string title = 1;
  string description = 2;
  string min_self_delegation = 3;
}
